[tool.poetry]
name = "todos-api"
version = "0.1.0"
description = ""
authors = ["AlifahadRajpoot <Ranaalifahad.fsd.275@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
